@@ -3,16 +3,18 @@ import org.gradle.internal.os.OperatingSystem
 plugins {
     id "java"
     id "application"
-    id "org.openjfx.javafxplugin" version "0.0.8"
-    id "org.beryx.runtime" version "1.8.0"
+    id "org.openjfx.javafxplugin" version "0.0.9"
+    id "org.beryx.runtime" version "1.12.1"
 }
 
 group = "io.github.mzmine"
-version = "2.52"
+version = "3.0"
 description = "MZmine"
-sourceCompatibility = "12"
-targetCompatibility = "12"
-defaultTasks "runtimeZip"
+
+// JDK 14+ is needed for jpackage
+sourceCompatibility = "14"
+targetCompatibility = "14"
+defaultTasks "jpackage"
 
 // Check the OS
 project.ext.osSuffix = OperatingSystem.current().getName().replaceAll(" ", "_")
@@ -28,9 +30,6 @@ println "OS detected as " + project.ext.osSuffix
 repositories {
     maven {
         url = "file://" + projectDir + "/src/main/lib"
-        metadataSources {
-            artifact()
-        }
     }
     maven { // For jmztab 3.0.9+ (https://github.com/PRIDE-Utilities/jmzTab)
         url = "https://dl.bintray.com/lifs/maven/"
@@ -42,10 +41,7 @@ repositories {
         url = "https://repo.maven.apache.org/maven2"
     }
     maven { // For SIRIUS ID modules
-        url = "https://bio.informatik.uni-jena.de/repository/libs-release-oss/"
-        metadataSources {
-            artifact()
-        }
+        url = "https://bio.informatik.uni-jena.de/repository/libs-oss/"
     }
     maven {
         url = "https://jitpack.io"
@@ -56,6 +52,9 @@ repositories {
     maven { // For cpdetector
         url = "https://nexus.nuiton.org/nexus/content/groups/releases/"
     }
+    maven { // For jimzml
+        url = "https://mvnrepository.com/artifact/com.alanmrace/jimzmlparser"
+    }
 }
 
 ext {
@@ -64,21 +63,27 @@ ext {
     jmztabVersion = "3.0.9"
     swaggerVersion = "1.5.22"
     okhttpVersion = "2.7.5"
-    guavaVersion = "28.1-jre"
-    slf4jVersion = "1.7.28"
+    guavaVersion = "30.1-jre"
+    slf4jVersion = "1.7.30"
     poiVersion = "4.1.0"
     batikVersion = "1.11"
-    controlsfxVersion = "11.0.0"
+    controlsfxVersion = "11.0.3"
+    jmzTabmVersion = "1.0.6"
+    jnaVersion = "5.6.0"
+    junitversion = "5.7.0"
+
+    // UUID for upgrades of this package on Windows. Generated by https://www.uuidgenerator.net 
+    win_uuid = "896e9c2d-6db8-4259-a1af-1b5f8112d1e1"
 }
 
 dependencies {
     implementation "com.github.graphstream:gs-core:2.0-alpha"
-    implementation "com.github.graphstream:gs-ui-swing:2.0-alpha"
-    implementation "org.jfree:jfreechart:1.5.0"
-    implementation "org.jfree:jfreechart-fx:1.0.1"
-    implementation "org.jfree:fxgraphics2d:1.8"
-    implementation "org.jfree:jfreesvg:3.3"
-    implementation "com.orsonpdf:orsonpdf:1.9"
+    implementation "com.github.graphstream:gs-ui-javafx:2.0-alpha"
+    implementation "org.jfree:jfreechart:1.5.3"
+    implementation "org.jfree:org.jfree.chart.fx:2.0.1"
+    implementation "org.jfree:org.jfree.fxgraphics2d:2.1"
+    implementation "org.jfree:org.jfree.svg:4.1"
+    implementation "org.jfree:org.jfree.pdf:2.0"
     implementation "com.google.guava:guava:$guavaVersion"
     implementation "org.apache.commons:commons-math:2.2"
     implementation "edu.ucar:netcdf4:4.5.5"
@@ -119,7 +124,7 @@ dependencies {
     implementation "io.github.msdk:msdk-featuredetection-adap3d:$msdkVersion"
     implementation "io.github.msdk:msdk-id-sirius:$msdkVersion"
     implementation "org.xerial:sqlite-jdbc:3.8.11.2"
-    implementation "org.du-lab.adap:adap:4.0.5"
+    implementation "org.du-lab.adap:adap:4.1.4"
     implementation "gnf:clustering:20130919"
     implementation "it.unimi.dsi:fastutil:8.2.2"
     implementation "com.itextpdf:itextpdf:5.5.13.1"
@@ -154,21 +159,29 @@ dependencies {
     implementation "org.controlsfx:controlsfx:$controlsfxVersion"
     implementation "org.drjekyll:fontchooser:2.4"
     implementation "org.json:json:20190722"
+    implementation "com.github.oshi:oshi-core:4.5.2"
+    // because the version that is pulled by SIRIUS crashes
+    implementation "de.isas.mztab:jmztabm-io:$jmzTabmVersion"
+    implementation 'net.java.dev.jna:jna:$jnaVersion'
+    implementation "com.alanmrace:jimzmlparser:1.0.5"
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitversion"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitversion"
 }
 
-/* 
- * Remove the xml-apis dependencies to avoid a compilation error in Eclipse. 
- * The org.w3c.dom package is present in the java.xml module as well as in these dependencies. 
+/*
+ * Remove the xml-apis dependencies to avoid a compilation error in Eclipse.
+ * The org.w3c.dom package is present in the java.xml module as well as in these dependencies.
  * That is illegal (https://bugs.eclipse.org/bugs/show_bug.cgi?id=536928).
  */
 configurations.all {
-  exclude group: "xml-apis", module: "xml-apis"
-  exclude group: "xml-apis", module: "xml-apis-ext"
-  exclude group: "xom", module: "xom"
-  exclude group: "ch.qos.logback", module: "logback-core"
-  exclude group: "ch.qos.logback", module: "logback-classic"
-  exclude group: "gurobi", module: "gurobi-linux64"
-  exclude group: "cplex", module: "cplex"
+    exclude group: "xml-apis", module: "xml-apis"
+    exclude group: "xml-apis", module: "xml-apis-ext"
+    exclude group: "xom", module: "xom"
+    exclude group: "ch.qos.logback", module: "logback-core"
+    exclude group: "ch.qos.logback", module: "logback-classic"
+    exclude group: "gurobi", module: "gurobi-linux64"
+    exclude group: "cplex", module: "cplex"
 }
 
 
@@ -176,54 +189,34 @@ configurations.all {
  * Include JavaFX modules
  */
 javafx {
-    version = "13.0.1"
-    modules = ["javafx.controls", 
-               "javafx.swing", 
+    version = "15.0.1"
+    modules = ["javafx.controls",
+               "javafx.swing",
                "javafx.fxml",
                "javafx.web",
                "javafx.graphics"
-              ]
+    ]
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+    options.compilerArgs += ['--enable-preview']
 }
 
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
 
 /*
  * Set the basic Java runtime parameters (heap size etc.)
  */
 application {
-    mainClassName = "net.sf.mzmine.main.MZmineCore"
+    mainClass.set("io.github.mzmine.main.MZmineCore")
     applicationName = "MZmine"
-    executableDir = ""
-    applicationDefaultJvmArgs = ["-showversion", 
-                                 "-XX:MaxHeapFreeRatio=100", 
-                                 "-XX:InitialRAMPercentage=30", 
-                                 "-XX:MinRAMPercentage=80",
-                                 "-XX:MaxRAMPercentage=80",
-                                 "-Djava.library.path=lib",
-                                 "-Dapple.awt.application.name=MZmine ${version}", 
-                                 "-Dapple.laf.useScreenMenuBar=true"
-                                ]
-}
-
-
-/*
- * Provide a default start script for this platform
- */
-startScripts {
-    applicationName = "startMZmine-" + osSuffix
-    classpath = files("lib/*")
-    doLast {
-        if (OperatingSystem.current().isWindows()) {
-            delete unixScript
-            // Temporary fix for https://github.com/gradle/gradle/issues/10387
-            windowsScript.text = windowsScript.text.replace('set JAVA_HOME=\"%~dp0.."', 'set JAVA_HOME="%~dp0"')
-        } else {
-            delete windowsScript
-        }
-    }
 }
 
 /*
@@ -233,6 +226,7 @@ runtime {
     options = ["--compress=2", "--vm=server", "--no-header-files", "--no-man-pages", "--output", "jre/jre"]
     modules = ["java.desktop",
                "java.logging",
+               "java.net.http",
                "java.rmi",
                "java.sql",
                "java.datatransfer",
@@ -250,52 +244,59 @@ runtime {
                "java.security.jgss",
                "jdk.unsupported",
                "jdk.unsupported.desktop"]
-    
-    imageDir = file("${buildDir}/${applicationName}-${version}-${osSuffix}")
-    imageZip = file(relativePath(imageDir) + ".zip")
+    jpackage {
+        if (OperatingSystem.current().isWindows()) {
+            // The WiX toolset must be installed, see https://wixtoolset.org/releases/
+            installerType = "msi"
+            // additional options for jpackage
+            imageOptions = ["--icon", "src/main/resources/MZmineIcon.ico"]
+            installerOptions = ["--win-menu",
+                                "--win-menu-group", "MZmine",
+                                "--win-shortcut",
+                                "--win-dir-chooser",
+                                "--win-upgrade-uuid", "$win_uuid",
+                                "--license-file", "LICENSE.txt"
+            ]
+        }
+        if (OperatingSystem.current().isMacOsX()) {
+            installerType = "dmg"
+            // additional options for jpackage
+            imageOptions = ["--icon", "src/main/resources/MZmineIcon.icns"]
+            installerOptions = ["--license-file", "LICENSE.txt"]
+        }
+        if (OperatingSystem.current().isLinux()) {
+            // for rpm, rpmbuild and rpm tools need to be installed, installerType needs to be set to "rpm"
+            installerType = "deb"
+            // additional options for jpackage
+            imageOptions = ["--icon", "src/main/resources/MZmineIcon.png"]
+            installerOptions = ["--linux-shortcut",
+                                "--linux-menu-group", "MZmine",
+                                "--license-file", "LICENSE.txt",
+                                "--linux-deb-maintainer", "plusik@gmail.com"
+            ]
+
+        }
+        installerName = "MZmine"
+        imageName = "MZmine"
+        jvmArgs = ["-showversion",
+                   "-XX:MaxHeapFreeRatio=100",
+                   "-XX:InitialRAMPercentage=30",
+                   "-XX:MinRAMPercentage=80",
+                   "-XX:MaxRAMPercentage=80",
+                   "-enableassertions",
+                   "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration",
+                   "--enable-preview"
+        ]
+    }
 }
 
 /*
- * Copy the resources like icons and logging properties
- */
-tasks.runtime.doLast {
-
-    // Remove the "release" file produced by jlink
-    delete file(relativePath(imageDir) + "/release")
-
-    copy {
-        from("src/main/icons")
-        into(relativePath(imageDir) + "/icons")
-    }
-    copy {
-        from("src/main/log")
-        into(relativePath(imageDir) + "/log")
-    }
-    copy {
-        from("src/main/conf/logging.properties")
-        into(relativePath(imageDir) + "/conf/")
-    }
-    copy {
-        from("manual.pdf")
-        into(relativePath(imageDir))
-    }
-    copy {
-        from("LICENSE.txt")
-        into(relativePath(imageDir) + "/legal/MZmine/")
-    }
-    copy {        
-        from("src/main/lib/vendor_lib")
-        into(relativePath(imageDir) + "/lib/vendor_lib")
-    }
-}
-
-/*
- * This is important in order to copy all .java, .fxml, and help files into the final MZmine jar. 
+ * This is important in order to copy all .java, .fxml, and help files into the final MZmine jar.
  * The .java files are only for people who want to check the source codes.
  * But the .fxml and help files are required for the GUI.
  */
 jar {
-  sourceSets.main.resources.srcDirs += ["src/main/java"]
+    sourceSets.main.resources.srcDirs += ["src/main/java"]
 }
 
 /*
@@ -303,6 +304,19 @@ jar {
  */
 processResources {
     filesMatching("mzmineversion.properties") {
-        expand(project.properties) 
+        expand(project.properties)
     }
 }
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
+task copyTestResources(type: Copy) {
+    from "${projectDir}/src/test/resources"
+    into "${buildDir}/classes/test"
+}
+processTestResources.dependsOn copyTestResources
